# Open-Omics-Acceleration-Framework

./: .gitmodules  README.md  aws-benchmarking
applications/Autodock4/src/autodock/: AUTHORS  INSTALL  Makefile.am  Makefile.in  NOTES_xml.txt  PDBQT_tokens.h  aclocal.m4  alea.cc  alea.h  analysis.cc  analysis.h  atom_parameter_manager.cc  atom_parameter_manager.h  autocomm.h  autodock3.1  autoglobal.h  banner.cc  banner.h  bestpdb.cc  bestpdb.h  calculateEnergies.cc  calculateEnergies.h  call_cpso.cc  call_cpso.h  call_glss.cc  call_glss.h  call_gs.cc  call_gs.h  call_ls.cc  call_ls.h  center_ligand.cc  center_ligand.h  changeState.cc  changeState.h  check_header_float.cc  check_header_float.h  check_header_int.cc  check_header_int.h  check_header_line.cc  check_header_line.h  (+183 more)
applications/Autodock4/src/autodock/EXAMPLES/1dwd/: mkdist  run_all_examples  run_examples
applications/Autodock4/src/autodock/EXAMPLES/1dwd/1dwd_rec_maps/: 1dwd_rec.A.map  1dwd_rec.C.map  1dwd_rec.HD.map  1dwd_rec.N.map  1dwd_rec.OA.map  1dwd_rec.S.map  1dwd_rec.d.map  1dwd_rec.e.map  1dwd_rec.maps.fld
applications/Autodock4/src/autodock/EXAMPLES/1dwd/1dwd_rigid_maps/: 1dwd_rigid.A.map  1dwd_rigid.C.map  1dwd_rigid.HD.map  1dwd_rigid.N.map  1dwd_rigid.NA.map  1dwd_rigid.OA.map  1dwd_rigid.S.map  1dwd_rigid.d.map  1dwd_rigid.e.map  1dwd_rigid.maps.fld  1dwd_rigid.maps.xyz
applications/Autodock4/src/autodock/EXAMPLES/1dwd/dock_flexlig/: 1dwd_1dwd.dlg  1dwd_1dwd.dpf  1dwd_1dwd_long.dpf  run_examples
applications/Autodock4/src/autodock/EXAMPLES/1dwd/dock_flexlig_25M/: 1dwd_1dwd.dlg  1dwd_1dwd.dpf  1dwd_1dwd_long.dpf  1dwd_lig.pdbqt  1dwd_rec.pdbqt  run_examples
applications/Autodock4/src/autodock/EXAMPLES/1dwd/dock_flexlig_flexres/: 1dwd_flex.pdbqt  1dwd_lig_1dwd_flexres_1dwd_rigid.dlg  1dwd_lig_1dwd_flexres_1dwd_rigid.dpf  1dwd_lig_1dwd_flexres_1dwd_rigid_long.dpf  1dwd_rigid.pdbqt  make_rigid_maps  run_examples
applications/Autodock4/src/autodock/EXAMPLES/1dwd/dock_flexlig_flexres_25M/: 1dwd_lig_1dwd_flexres_1dwd_rigid.dpf  1dwd_lig_1dwd_flexres_1dwd_rigid_long.dpf  1dwd_lig_1dwd_flexres_25M.dlg  1dwd_rigid.gpf  run_examples
applications/Autodock4/src/autodock/EXAMPLES/1dwd/dock_rigidlig/: 1dwd_0.pdbqt  1dwd_1dwd.dpf  1dwd_1dwd.gpf  1dwd_1dwd_long.dpf  1dwd_rigidlig.dlg  make_rec_maps  run_examples
applications/Autodock4/src/autodock/EXAMPLES/1dwd/dock_rigidlig_25M/: 1dwd_1dwd.dpf  1dwd_1dwd_long.dpf  1dwd_rigid_25M.dlg  run_examples
applications/Autodock4/src/autodock/EXAMPLES/1dwd/eval_lig/: 1dwd_epdb.dlg  1dwd_epdb.dpf  1dwd_epdb_best.dlg  1dwd_epdb_best.dpf  best.pdbqt  run_examples
applications/Autodock4/src/autodock/EXAMPLES/1dwd/local_search_lig/: 1dwd_local_only.dlg  1dwd_local_only.dpf  1dwd_local_only_best.dlg  1dwd_local_only_best.dpf  1dwd_local_only_best_long.dpf  1dwd_local_only_long.dpf  run_examples
applications/Autodock4/src/autodock/EXAMPLES/1dwd/recluster/: 1dwd_1dwd_1.dlg  1dwd_1dwd_2.dlg  1dwd_1dwd_3.dlg  1dwd_1dwd_4.dlg  ligand.pdbqt  recluster.dlg  recluster.dpf  run_examples
applications/Autodock4/src/autodock/EXAMPLES/1dwd/simulated_annealing/: 1dwd_simulated_annealing.dpf  1dwd_simulated_annealing_long.dpf  run_examples
applications/Autodock4/src/autodock/EXAMPLES/4hvp/4hvp_rec_maps/: 4hvp_rec.C.map  4hvp_rec.HD.map  4hvp_rec.N.map  4hvp_rec.OA.map  4hvp_rec.d.map  4hvp_rec.e.map  4hvp_rec.maps.fld  4hvp_rec.maps.xyz
applications/Autodock4/src/autodock/EXAMPLES/4hvp/4hvp_rigid_maps/: 4hvp_rigid.C.map  4hvp_rigid.HD.map  4hvp_rigid.N.map  4hvp_rigid.OA.map  4hvp_rigid.d.map  4hvp_rigid.e.map  4hvp_rigid.maps.fld  4hvp_rigid.maps.xyz
applications/Autodock4/src/autodock/EXAMPLES/4hvp/dock_flexlig/: 4hvp_4hvp.dlg  4hvp_4hvp.dpf
applications/Autodock4/src/autodock/EXAMPLES/4hvp/dock_flexlig_25M/: 4hvp_4hvp.dpf  4hvp_4hvp.glg  (+2 more)
applications/Autodock4/src/autodock/Tests/: 1pgp.dpf  1pgp.dpf.dpf  1pgp.fpd  1pgp.gpf  1pgp_1_4_100.dpf  1pgp_1_4_50.dpf  1pgp_about_auto_ga_only.dpf  1pgp_about_auto_gals.dpf  1pgp_about_auto_local_only.dpf  1pgp_about_auto_simanneal.dpf  1pgp_about_only.dpf  1pgp_epdb_etables.dpf  1pgp_epdb_flexres_intelec.dpf  1pgp_epdb_flexres_nointelec.dpf  1pgp_flex.pdbqt  1pgp_flexlig_pso_ls1_psw1.dpf  1pgp_flexres.dpf  1pgp_flexres_1_4_100.dpf  1pgp_flexres_1_4_50.dpf  1pgp_flexres_emptyligand.dpf  1pgp_ga_only.dpf  1pgp_ga_run_maxruns.dpf  1pgp_ga_run_maxruns_analysis.dpf  1pgp_ga_select_linear_ranking.dpf  1pgp_ga_select_tournament.dpf  1pgp_gals_10runs.dpf  1pgp_gals_set_sw1.dpf  1pgp_gals_use_defaults.dpf  1pgp_illegal_keyword.dpf  1pgp_illegal_outlev.dpf  1pgp_illegal_symoutlev.dpf  1pgp_intelec_off.dpf  1pgp_intnbcoeffs.dpf  1pgp_intnbpreps.dpf  1pgp_intnbpreps_illegal_atom.dpf  1pgp_intnbpreps_toofew.dpf  1pgp_just_right_number_torsions.dpf  1pgp_lig.pdbqt  1pgp_lig2.pdbqt  1pgp_ligNOH.pdbqt  (+83 more)
applications/Autodock4/src/autodock/USERGUIDES/: AutoDock4.0_UserGuide.doc  AutoDock4.1_UserGuide.doc  AutoDock4.2_UserGuide.doc  README
applications/Autodock4/src/autogrid/: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  atom_parameter_manager.cpp  atom_parameter_manager.h  autogrid.h  banner.cpp  calc_vina_potential.cpp  calc_vina_potential.h  check_size.cpp  configure  configure-universalDarwin  configure.ac  convertmap.cpp  copyfilesfromAD  distdepdiel.cpp  distdepdiel.h  gpfparser.cpp  gpftoken.h  grid.h  gridmap.h  init_gridmap.cpp  main.cpp  makecheck  parameters.h  parm.h  parsetypes.cpp  prHMSfixed.cpp  prototypes.h  setflags.cpp  strindex.cpp  times.h  typedefs.h  util.cpp  util.h
applications/Autodock4/src/autogrid/Tests/: hsg1.pdbqt  hsg1_no_receptor_types.gpf  hsg1_sm.gpf  hsg1_sm.pdbqt  hsg1_sm_minus_two_types.gpf  hsg1_sm_nbpcoeffs.gpf  hsg1_sm_nbpreps.gpf  hsg1_sm_nbpreps_illegal_atom.gpf  hsg1_sm_nbpreps_toofew.gpf  hsg1_sm_no_parameter_file.gpf  py_hsg1_sm.A.map  py_hsg1_sm.C.map  py_hsg1_sm.HD.map  py_hsg1_sm.N.map  py_hsg1_sm.NA.map  py_hsg1_sm.OA.map  py_hsg1_sm.d.map  py_hsg1_sm.e.map  test_autogrid4.py  write_python_maps.py  x1hpv.pdbqt  x1hpv_CASE0.gpf  x1hpv_CASE1.gpf  x1hpv_CASE2.gpf  x1hpv_CASE3.gpf
(+765 files in other folders)
